+Inventory +CollectableItems +Crafting

--- a/Alchemyst.uproject
+++ b/Alchemyst.uproject
@@ -7,7 +7,21 @@
 		{
 			"Name": "Alchemyst",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"CoreUObject"
+			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "RiderLink",
+			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
